ADEN-13438 quick-fix for bottom ads being too close to each other

--- a/src/platforms/news-and-ratings/gamespot/styles.scss
+++ b/src/platforms/news-and-ratings/gamespot/styles.scss
@@ -31,4 +31,8 @@ body:not(.skybox-loaded) {
 	}
 }
 
+.mapped-incontent-ad-plus-billboard-bottom.page-spacing-rem {
+	margin-top: 4rem;
+}
+
 @include out-of-page-styles();
